--- a/public/css/member-bios-public.css
+++ b/public/css/member-bios-public.css
@@ -11,57 +11,58 @@
  * Copyright (C) 2019 Mitch Negus
  */
 
+
 /* member pages 
 ------------------------------*/
-div#profile-block {
+.wp-member-bios div#profile-block {
 	display: flex;
 	align-items: center;
 }
 @media screen and (max-width: 767px) {
-	div#profile-block {
+	.wp-member-bios div#profile-block {
 		flex-direction: column;
 	}
 }
 
-div#member-image {
+.wp-member-bios div#member-image {
 	flex: 0 0 200px;
   margin-right: 30px;
 }
 @media screen and (max-width: 767px) {
-	div#member-image {
+	.wp-member-bios div#member-image {
 		margin-right: 0;
 	}
 }
 
-div#member-info {
+.wp-member-bios div#member-info {
 	flex-basis: 100%;
 }
 
-div#member-header {
+.wp-member-bios div#member-header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 @media screen and (max-width: 767px) {
-	div#member-header {
+	.wp-member-bios div#member-header {
 		flex-direction: column;
 	}
 }
 
-h1#member-name {
+.wp-member-bios h1#member-name {
 	font-weight: normal;
 }
 @media screen and (max-width: 767px) {
-	h1#member-name {
+	.wp-member-bios h1#member-name {
 		margin-bottom: 5px;
 	}
 }
-h2#member-position {
+.wp-member-bios h2#member-position {
 	margin-right: 15%;
 	color: #888888;
 }
 @media screen and (max-width: 767px) {
-	h2#member-position {
+	.wp-member-bios h2#member-position {
 		margin-right: 0;
 		margin-bottom: 30px;
 		font-size: 16pt;
@@ -70,7 +71,7 @@ h2#member-position {
 
 /* member tiles
 ------------------------------*/
-div.mtile-container {
+.wp-member-bios div.mtile-container {
   position: relative;
 	overflow: hidden;
   height: 150pt;
@@ -80,13 +81,13 @@ div.mtile-container {
   background-color: #E2E2E2
 }
 @media screen and (max-width: 767px) {
-	div.mtile-container {
+	.wp-member-bios div.mtile-container {
 		height: 100pt;
 		width: 100pt;
 	}
 }
 
-div.mtile-overlay {
+.wp-member-bios div.mtile-overlay {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -99,12 +100,12 @@ div.mtile-overlay {
   transition: .2s ease;
 }
 
-div.mtile-container:hover div.mtile-overlay {
+.wp-member-bios div.mtile-container:hover div.mtile-overlay {
   opacity: 0.9;
   left: 0;
 }
 
-div.mtile-text {
+.wp-member-bios div.mtile-text {
   position: absolute;
   overflow: hidden;
   white-space: nowrap;
@@ -116,38 +117,38 @@ div.mtile-text {
   -ms-transform: translate(-50%, -50%);
 }
 @media screen and (max-width: 767px) {
-	div.mtile-text {
+	.wp-member-bios div.mtile-text {
 		font-size: 10px;
 	}
 }
 
-div.mtile-text1 {
+.wp-member-bios div.mtile-text1 {
   font-size: 12px;
   top: 30%;
 }
 @media screen and (max-width: 767px) {
-	div.mtile-text1 {
+	.wp-member-bios div.mtile-text1 {
 		font-size: 10px;
 	}
 }
 
-div.mtile-text2 {
+.wp-member-bios div.mtile-text2 {
   font-size: 10px;
   top: 70%;
 }
 @media screen and (max-width: 767px) {
-	div.mtile-text2 {
+	.wp-member-bios div.mtile-text2 {
 		font-size: 8px;
 	}
 }
 
 /* alumni button 
 ------------------------------*/
-a.alumni-link:hover {
+.wp-member-bios a.alumni-link:hover {
 	text-decoration: none;
 }
 
-div.alumni-button {
+.wp-member-bios div.alumni-button {
 	display: flex;
   background-color: #EEEEEE;
 	border-radius: 10px;
@@ -158,17 +159,17 @@ div.alumni-button {
 	font-weight: bold;
 }
 
-div.alumni-button:hover {
+.wp-member-bios div.alumni-button:hover {
 	background-color: #EAEAEA;
 }
 
-p.alumni-button-text {
+.wp-member-bios p.alumni-button-text {
 	margin: auto;
 }
 
 /* contact block
 ------------------------------*/
-div.contact-block {
+.wp-member-bios div.contact-block {
 	margin: 20px auto;
   padding: 20px 40px;
 	text-align: center;
@@ -176,31 +177,31 @@ div.contact-block {
 
 /* new member page
 ------------------------------*/
-div.new-member-form-element {
+.wp-member-bios div.new-member-form-element {
 	margin-top: 15px;
 	padding-right: 15px;
 }
 
-span.new-member-form-label {
+.wp-member-bios span.new-member-form-label {
 	font-weight: bold;
 }
 
-label.new-member-form-label {
+.wp-member-bios label.new-member-form-label {
 	font-weight: bold;
 }
 
-span.new-member-form-label-required {
+.wp-member-bios span.new-member-form-label-required {
 	font-weight: normal;
 	color: #A9A9A9;
 }
 
 /* General classes
 -------------------------------*/
-.full-width {
+.wp-member-bios .full-width {
 	width: 100%;
 }
 
-.clearfix::after {
+.wp-member-bios .clearfix::after {
   content: "";
   clear: both;
   display: table;
